<resources>
    <string name="app_name">MOD Expenses Tracker</string>

    <string name="take_receipt_photo">Take Receipt Photo</string>
    <string name="enter_amount">Enter amount</string>
    <string name="total_amount">Total Amount: £0.00</string>
    <string name="total_amount_label">Total Amount: %1$s%2$.2f</string>
    <string name="amount_label">Amount: %1$s%2$.2f</string>
    <string name="timestamp">Timestamp</string>
    <string name="receipt">Receipt</string>
    <string name="share_expenses">Share Expenses</string>
    <string name="currency_symbol">£</string>

    <string name="no_camera_app">No camera app found</string>
    <string name="camera_permission_required">Camera permission is required</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="photo_capture_failed">Failed to capture image</string>
    <string name="failed_to_create_image_uri">Failed to create image URI</string>
    <string name="permission_media_images_denied">Permission to access media images denied</string>

    <string name="timestamp_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="image_file_prefix">receipt_%1$d.jpg</string>
    <string name="delete">Delete</string>

    <string name="no_expenses_to_share">No expenses to share</string>
    <string name="expense_report_subject">Expense Report</string>
    <string name="send_email">Send Email</string>
    <string name="no_email_clients">No email clients installed</string>
    <string name="expense_report_header">Expense Report</string>
    <string name="amount">Amount</string>
    <string name="no_receipts">No receipts to display</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_activity_selected">No activity selected</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="add_activity">Add Activity</string>
    <string name="receipt_image_desc">receipt image</string>
    <string name="amount_0_00">Amount: £0.00</string>
    <string name="timestamp_2023_10_02_12_34_56">Timestamp: 2023–10–02 12:34:56</string>
    <string name="activity_work">Activity: Work</string>
    <string name="activity">Activity: %1$s</string>
    <string name="delete_activity">delete_activity</string>
</resources>
